[gd_scene load_steps=13 format=3 uid="uid://dv5xsuahvrhoq"]

[ext_resource type="Script" path="res://scenes/networking/connection_manager.gd" id="1_bflg5"]
[ext_resource type="Script" path="res://scenes/networking/WebSocketClient.gd" id="2_s73ml"]
[ext_resource type="Script" path="res://scenes/camera.gd" id="3_31bk2"]
[ext_resource type="ButtonGroup" uid="uid://ddgglsijly4yd" path="res://misc/measure_mode_button_group.tres" id="3_424di"]
[ext_resource type="Script" path="res://scenes/hex_grid.gd" id="4_g82ij"]
[ext_resource type="PackedScene" uid="uid://bfnmgqnqjbj7o" path="res://scenes/token_builder.tscn" id="6_cuohw"]
[ext_resource type="Script" path="res://scenes/map.gd" id="6_pbsjv"]
[ext_resource type="Shader" path="res://map.gdshader" id="6_vgcu5"]
[ext_resource type="Texture2D" uid="uid://cbdnjpjhir6el" path="res://icon.png" id="7_1tjdr"]
[ext_resource type="Script" path="res://scenes/ClickHandler.gd" id="8_81gb3"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_3an0l"]
shader = ExtResource("6_vgcu5")
shader_parameter/tile_size = Vector2(64, 64)
shader_parameter/offset = Vector2(-18, 4)
shader_parameter/is_horizontal = true
shader_parameter/visible = PackedInt32Array(0, 0, 2, 1)
shader_parameter/visible_size = 2
shader_parameter/fow_color = Color(0, 0, 0, 0.5)

[sub_resource type="ButtonGroup" id="ButtonGroup_8o6if"]
resource_name = "Sizes"

[node name="main" type="Node2D"]
script = ExtResource("1_bflg5")

[node name="Socket" type="Node" parent="."]
script = ExtResource("2_s73ml")

[node name="UI" type="CanvasLayer" parent="."]

[node name="V" type="VBoxContainer" parent="UI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="UI/V"]
layout_mode = 2

[node name="Header" type="HBoxContainer" parent="UI/V/PanelContainer"]
layout_mode = 2

[node name="GM" type="HBoxContainer" parent="UI/V/PanelContainer/Header"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MapLayout" type="GridContainer" parent="UI/V/PanelContainer/Header/GM"]
layout_mode = 2
theme_override_constants/h_separation = 27
columns = 4

[node name="X" type="Label" parent="UI/V/PanelContainer/Header/GM/MapLayout"]
layout_mode = 2
text = "x"

[node name="SpinBox" type="SpinBox" parent="UI/V/PanelContainer/Header/GM/MapLayout"]
layout_mode = 2
allow_greater = true
allow_lesser = true

[node name="Y" type="Label" parent="UI/V/PanelContainer/Header/GM/MapLayout"]
layout_mode = 2
text = "y"

[node name="SpinBox2" type="SpinBox" parent="UI/V/PanelContainer/Header/GM/MapLayout"]
layout_mode = 2
allow_greater = true
allow_lesser = true

[node name="SX" type="Label" parent="UI/V/PanelContainer/Header/GM/MapLayout"]
layout_mode = 2
text = "width"

[node name="SpinBox3" type="SpinBox" parent="UI/V/PanelContainer/Header/GM/MapLayout"]
layout_mode = 2
value = 64.0
allow_greater = true

[node name="SY" type="Label" parent="UI/V/PanelContainer/Header/GM/MapLayout"]
layout_mode = 2
text = "height"

[node name="SpinBox4" type="SpinBox" parent="UI/V/PanelContainer/Header/GM/MapLayout"]
layout_mode = 2
value = 64.0
allow_greater = true

[node name="HorizontalGrid" type="CheckButton" parent="UI/V/PanelContainer/Header/GM"]
layout_mode = 2
size_flags_vertical = 0
text = "Horizontal"

[node name="Fog" type="OptionButton" parent="UI/V/PanelContainer/Header/GM"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0
item_count = 4
selected = 2
popup/item_0/text = "Transparent"
popup/item_0/id = 0
popup/item_1/text = "Show Map"
popup/item_1/id = 1
popup/item_2/text = "Hide All"
popup/item_2/id = 2
popup/item_3/text = "No Sensors"
popup/item_3/id = 3

[node name="SetMap" type="Button" parent="UI/V/PanelContainer/Header/GM"]
layout_mode = 2
size_flags_vertical = 0
text = "Add Map"

[node name="UpdateVissbility" type="Button" parent="UI/V/PanelContainer/Header/GM"]
layout_mode = 2
text = "Update visibility"

[node name="General" type="GridContainer" parent="UI/V/PanelContainer/Header"]
layout_mode = 2
size_flags_vertical = 0
columns = 2

[node name="RoomName" type="LineEdit" parent="UI/V/PanelContainer/Header/General"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
text = "testing_ground"
expand_to_text_length = true
caret_blink = true
caret_blink_interval = 0.5

[node name="Host" type="Button" parent="UI/V/PanelContainer/Header/General"]
layout_mode = 2
text = "Host"

[node name="ConnectionStatus" type="Label" parent="UI/V/PanelContainer/Header/General"]
unique_name_in_owner = true
layout_mode = 2
text = "Offline"

[node name="Join" type="Button" parent="UI/V/PanelContainer/Header/General"]
layout_mode = 2
text = "Connect"

[node name="H" type="HBoxContainer" parent="UI/V"]
layout_mode = 2
size_flags_vertical = 3

[node name="Margins" type="MarginContainer" parent="UI/V/H"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 10

[node name="V" type="VBoxContainer" parent="UI/V/H/Margins"]
layout_mode = 2

[node name="None" type="Button" parent="UI/V/H/Margins/V"]
layout_mode = 2
toggle_mode = true
button_group = ExtResource("3_424di")
text = "[]"
metadata/mode = 0

[node name="Measure" type="Button" parent="UI/V/H/Margins/V"]
layout_mode = 2
toggle_mode = true
button_group = ExtResource("3_424di")
text = "Measure"
metadata/mode = 1

[node name="DrawLine" type="Button" parent="UI/V/H/Margins/V"]
layout_mode = 2
toggle_mode = true
button_group = ExtResource("3_424di")
text = "Line"
metadata/mode = 2

[node name="DrawCone" type="Button" parent="UI/V/H/Margins/V"]
layout_mode = 2
toggle_mode = true
button_group = ExtResource("3_424di")
text = "Cone"
metadata/mode = 3

[node name="DrawBurst" type="Button" parent="UI/V/H/Margins/V"]
layout_mode = 2
toggle_mode = true
button_group = ExtResource("3_424di")
text = "Burst"
metadata/mode = 4

[node name="DrawFog" type="Button" parent="UI/V/H/Margins/V"]
layout_mode = 2
toggle_mode = true
button_group = ExtResource("3_424di")
text = "Fog"
metadata/mode = 5

[node name="Control" type="Control" parent="UI/V/H"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="Camera2D" type="Camera2D" parent="."]
script = ExtResource("3_31bk2")

[node name="HexMap" type="Node2D" parent="."]
script = ExtResource("4_g82ij")
measure_mode_button_group = ExtResource("3_424di")

[node name="Map" type="Sprite2D" parent="HexMap"]
z_index = -10
material = SubResource("ShaderMaterial_3an0l")
texture = ExtResource("7_1tjdr")
script = ExtResource("6_pbsjv")

[node name="TokenBuilder" parent="." instance=ExtResource("6_cuohw")]
visible = false
ok_button_text = "Confirm"
cancel_button_text = "Remove"
size_buttons = SubResource("ButtonGroup_8o6if")

[node name="ExpectingMap" type="AcceptDialog" parent="."]
size = Vector2i(256, 256)
dialog_text = "Drop Map here"

[node name="ClickHandler" type="Node2D" parent="." node_paths=PackedStringArray("hexgrid", "camera")]
script = ExtResource("8_81gb3")
hexgrid = NodePath("../HexMap")
camera = NodePath("../Camera2D")

[connection signal="value_changed" from="UI/V/PanelContainer/Header/GM/MapLayout/SpinBox" to="HexMap" method="_on_x0_changed"]
[connection signal="value_changed" from="UI/V/PanelContainer/Header/GM/MapLayout/SpinBox2" to="HexMap" method="_on_y0_changed"]
[connection signal="value_changed" from="UI/V/PanelContainer/Header/GM/MapLayout/SpinBox3" to="HexMap" method="_on_sizex_changed"]
[connection signal="value_changed" from="UI/V/PanelContainer/Header/GM/MapLayout/SpinBox4" to="HexMap" method="_on_sizey_changed"]
[connection signal="toggled" from="UI/V/PanelContainer/Header/GM/HorizontalGrid" to="HexMap" method="_on_horizontal_changed"]
[connection signal="item_selected" from="UI/V/PanelContainer/Header/GM/Fog" to="HexMap" method="_on_fog_item_selected"]
[connection signal="pressed" from="UI/V/PanelContainer/Header/GM/SetMap" to="." method="_on_set_map_pressed"]
[connection signal="pressed" from="UI/V/PanelContainer/Header/GM/UpdateVissbility" to="HexMap" method="_on_visible_tiles_changed"]
[connection signal="pressed" from="UI/V/PanelContainer/Header/General/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="UI/V/PanelContainer/Header/General/Join" to="." method="_on_join_pressed"]
